--- a/pages/agenda/agenda.html
+++ b/pages/agenda/agenda.html
@@ -39,7 +39,7 @@
                 </article>
 
                 <article><h1>Python for DataScience (from scratch)</h1>
-                    <section id="PythonBasics" data-hours="6">
+                    <section id="PythonBasics" data-hours="8">
                         <h3>Get familiar with Python</h3>
                         <ol>
                             <li>Set up the environment: Python, VS Code</li>
@@ -51,13 +51,22 @@
                             <li>Working with Git and Github</li>
                         </ol>
                     </section>
-                    <section id="DataScienceIntroAndTools" data-hours="4">
-                        <h3>Introduction to Data Science and Tools</h3>
+                    <section id="GitAndGitHub" data-hours="2">
+                        <h3>Working with Git and GitHub</h3>
                         <ol>
-                            <li>Jupyter Notebook</li>
-                            <li>NumPy - ndarrays</li>
-                            <li>Pandas - DataFrames</li>
-                            <li>Matplotlib/Seaborn</li>
+
+                        </ol>
+                    </section>
+                    <section id="DataScienceAndMLToolsOverview" data-hours="2">
+                        <h3>Data Science and Machine Learning Tools Overview</h3>
+                        <ol>
+
+                        </ol>
+                    </section>
+                    <section id="JupyterNotebookHandsOn" data-hours="2" data-wip>
+                        <h3>Hands-On with Jupyter Notebook</h3>
+                        <ol>
+
                         </ol>
                     </section>
                     <section id="Practice_PythonForDataAnalyses" data-hours="2" data-wip>
@@ -66,7 +75,7 @@
                 </article>
 
                 <article><h1>Machine Learning basics</h1>
-                    <section id="ML_Basics" data-hours="8" data-wip>
+                    <section id="ML_Basics" data-hours="6" data-wip>
                         <h3>Machine Learning basics</h3>
                         <ol>
                             <li>What ML models are and how they learn</li>
@@ -94,7 +103,7 @@
                             <li>Text preprocessing: cleaning and normalizing text</li>
                             <li>Tokenization</li>
                             <li>Text vectorization: Bag-of-Words (BoW), TF-IDF, word embeddings</li>
-                            <li>n-grams / context modeling - capturing token sequences and relationships</li>
+                            <!-- <li>n-grams / context modeling - capturing token sequences and relationships</li> -->
                             <li>Basic language tasks</li>
                             <li>Practical example: Simple Sentiment Analysis model (data prep → vectorization → training → evaluation)</li>
                         </ol>
@@ -163,7 +172,7 @@
                 </article>
 
                 <article><h1>Course project and Portfolio </h1>
-                    <section id="Module11_FinalProject" data-hours="8" data-wip>
+                    <section id="Module11_FinalProject" data-hours="4" data-wip>
                         <h3>Final Project and Portfolio</h3>
                         <ol>
                             <li>Selecting and planning your own idea for an <strong>AI Assistant</strong> (with instructor support)</li>
@@ -172,7 +181,7 @@
                             <li><strong>Presenting the final projects</strong></li>
                         </ol>
                     </section>
-                    <section id="PortfolioAndCvTips" data-hours="4" data-wip>
+                    <section id="PortfolioAndCvTips" data-hours="2" data-wip>
                         <h3>Discuss your portfolio and CV tips</h3>
                         <ol>
                             <li>Tips for <strong>CV, LinkedIn</strong> and building an AI portfolio</li>
