--- a/pages/agenda/agenda.html
+++ b/pages/agenda/agenda.html
@@ -63,13 +63,13 @@
 
                         </ol>
                     </section>
-                    <section id="JupyterNotebookHandsOn" data-hours="2" data-wip>
-                        <h3>Hands-On with Jupyter Notebook</h3>
+                    <section id="HandsOnWithPandasInJupyterNotebook" data-hours="2">
+                        <h3>Hands-On with Pandas in Jupyter Notebook</h3>
                         <ol>
 
                         </ol>
                     </section>
-                    <section id="Practice_PythonForDataAnalyses" data-hours="2" data-wip>
+                    <section id="Practice_PythonForDataAnalyses" data-hours="2">
                         <h3>Practice: Python for data analysis</h3>
                     </section>
                 </article>
