--- a/pages/readings/UsefulResources.html
+++ b/pages/readings/UsefulResources.html
@@ -18,6 +18,7 @@
     <section class="disclaimer">The list is ever changing... Your proposals are welcome!</section>
     <section class="resources_list_container">
         <ul>
+            <li><a href="https://readytobuild.app/">readytobuild.</a>: App Ideas Ready to Build</li>
 
         </ul>
     </section>
