add example notebook in Colab

--- a/pages/themes/ML_Basics/ML_Basics.html
+++ b/pages/themes/ML_Basics/ML_Basics.html
@@ -185,6 +185,11 @@
                         <dd><a href="https://blog.minitab.com/en/blog/statistics-and-quality-data-analysis/so-why-is-it-called-regression-anyway">So Why Is It Called Regression Anyway</a></dd>
                     </dl>
                 </section>
+                <section><h3>Examples of Supervised Learning with Scikit-Learn</h3>
+                    <dl class="fa" style="min-width:80vw">
+                        <dt>The examples are given in next Jupyter Notebook <a href="https://drive.google.com/file/d/1uLPA6sDlnovtVzV0r-W5EjemakRHJsI5/view?usp=sharing">simple_supervised_learning_examples.ipynb</a></dt>
+                    </dl>
+                </section>
             </section>
 
 
