--- a/pages/agenda/agenda.html
+++ b/pages/agenda/agenda.html
@@ -90,18 +90,18 @@
                             <li>Model evaluation: accuracy, confusion matrix, precision, recall</li>
                         </ol>
                     </section>
-                    <section id="Project1" data-hours="2" data-wip>
+                    <section id="Project1_BuildASpamClassifier" data-hours="2">
                         <h3>Project 1: Build a Spam Classifier</h3>
                         <ol>
-                            <li></li>
+                            <li>Project 1: Build a Spam Classifier</li>
                         </ol>
                     </section>
                 </article>
 
                 <article>
                     <h1>NLP Basics</h1>
-                    <section id="NLP_Basics" data-hours="4" data-wip>
-                        <h3>NLP</h3>
+                    <section id="NLP_Basics" data-hours="4">
+                        <h3>NLP Basics</h3>
                         <ol>
                             <li>Introduction to Natural Language Processing (NLP)</li>
                             <li>Text preprocessing: cleaning and normalizing text</li>
