--- a/pages/readings/UsefulResources.html
+++ b/pages/readings/UsefulResources.html
@@ -18,8 +18,8 @@
     <section class="disclaimer">The list is ever changing... Your proposals are welcome!</section>
     <section class="resources_list_container">
         <ul>
+            <li><a href="https://github.com/dkharazi/notes/tree/master/ml">Darius Kharazi notes on ML</a>: well structured GitHub repo with notes on ML</li>
             <li><a href="https://readytobuild.app/">readytobuild.</a>: App Ideas Ready to Build</li>
-
         </ul>
     </section>
     <section class="disclaimer">to be continued...</section>
