--- a/pages/themes/ML_Basics/ML_Basics.html
+++ b/pages/themes/ML_Basics/ML_Basics.html
@@ -283,7 +283,7 @@
             <section class="disclaimer"
                 data-background="/ProgressBG-ChatGPT_and_ML-Slides/outfit/images/for_slides/the_end_on_sand.jpg">
                 <p>These slides are based on</p>
-                <p>customised version of </p>
+                <p>customized version of </p>
                 <p><a href="http://hakim.se/">Hakimel</a>'s <a href="http://lab.hakim.se/reveal-js">reveal.js</a></p>
                 <p>framework</p>
             </section>
