feat: mark Sparse vs Dense as advanced

--- a/pages/themes/NLP_Basics/NLP_Basics.html
+++ b/pages/themes/NLP_Basics/NLP_Basics.html
@@ -481,7 +481,7 @@
                         <dd>Words that appear often in all documents get low scores.</dd>
                     </dl>
                 </section>
-                <section id="SparseVsDense"><h3>Concepts clarification: sparse vs dense matrix</h3>
+                <section id="SparseVsDense"><h3 class="advanced">Concepts clarification: sparse vs dense matrix</h3>
                     <dl class="fa">
                         <dt>Sparse matrix:</dt>
                         <dd><b>Definition:</b> A matrix where most of the elements are zero.</dd>
